# sigsum-rs

./: .gitcarbon  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo-shear.yml  ci.yml
src/: crypto.rs  lib.rs  log.rs  merkle.rs  policy.rs  serialization.rs  sigsumsig.rs  spicy.rs  verify.rs
src/io/ascii/: mod.rs  parser.rs
src/io/ascii/snapshots/: sigsum__io__ascii__tests__inclusionproof_from_ascii.snap  sigsum__io__ascii__tests__sigsumsig_from_ascii.snap  sigsum__io__ascii__tests__spicysig_from_ascii.snap  sigsum__io__ascii__tests__sth_from_ascii.snap
src/io/ascii/testdata/: inclusion-proof.ascii  sigsum-signature_extra-line.ascii  spicy-signature.ascii  spicy-signature_missing-part.ascii  spicy-signature_too-many-parts.ascii  spicy-signature_version-not-supported.ascii  tree-head.ascii
src/merkle/: mod.rs
src/policy/: builtin.rs  mod.rs  parsing.rs
src/policy/snapshots/: sigsum__policy__tests__duplicate_log_key.snap  sigsum__policy__tests__duplicate_quorum_name.snap  sigsum__policy__tests__duplicate_witness_key.snap  sigsum__policy__tests__unknown_quorum_name.snap
src/snapshots/: sigsum__policy__tests__duplicate_log_key.snap  sigsum__policy__tests__duplicate_quorum_name.snap  sigsum__policy__tests__duplicate_witness_key.snap  sigsum__policy__tests__uplicate_unknown_member_name.snap
tests-wip/: verify_test.rs
tests-wip/testdata/: signed-data.txt  signing-key  signing-key.pub
tools/: genexample.sh
