[package]
name = "sigsum"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/mullvad/sigsum-rs"
repository = "https://github.com/mullvad/sigsum-rs"
documentation = "https://docs.rs/sigsum"
description = """
A Rust library for using Sigsum transparency logs.
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = "0.3.0"
base64ct = { version = "1.8.0", features = ["alloc"] }
ed25519-dalek = "2.2.0"
sha2 = "0.10.8"
thiserror = "2.0.17"

[dev-dependencies]
hex-literal = "1.0.0"
insta = "1.44.3"
lazy_static = "1.5.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[lints.clippy]
todo = "deny"
