[package]
name = "sigsum"
version = "0.2.0"
edition = "2021"
description = """
A Rust library for using Sigsum transparency logs.
"""
documentation = "https://docs.rs/sigsum"
homepage = "https://github.com/mullvad/sigsum-rs"
repository = "https://github.com/mullvad/sigsum-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = "0.3.0"
base64ct = { version = "1.8.0", features = ["alloc"] }
ed25519-dalek = "2.2.0"
sha2 = "0.10.8"
thiserror = "2.0.17"

[dev-dependencies]
hex-literal = "1.0.0"
insta = "1.44.3"
lazy_static = "1.5.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[lints.clippy]
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
borrow_as_ptr = "warn"
implicit_clone = "warn"
todo = "deny"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unused_async = "deny"
wildcard_dependencies = "deny"

[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
# Easy to read style and opinionated best practices
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "deny"
missing_abi = "deny"
# Security
non_ascii_idents = "forbid"
# Deny old style Rust
rust_2018_idioms = { level = "deny", priority = -1 }
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
